Fix modal sizing on mobile
- Set max width so that it will fill space on small screens

--- a/public/global.css
+++ b/public/global.css
@@ -1,9 +1,3 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
-
 :root {
   --text: black;
   --background: white;
@@ -18,14 +12,14 @@ body {
 
   --box-shadow: 0 4px 23px 0 rgba(0, 0, 0, 0.2);
 
-  --modal-background-z-index: 1000;
-  --modal-z-index: 1001;
+  --modal-z-index: 1000;
   --confetti-z-index: 2000;
 
-  --modal-background-color: var(--background);
-  --modal-background-opacity: 0.8;
+  --modal-backdrop-opacity: 0.8;
   --modal-background: var(--background);
-  --modal-padding: 2rem;
+  --modal-margin: 2rem;
+  --modal-padding: 1rem;
+  --modal-max-width: 600px;
   --modal-close-button-inset: calc(var(--modal-padding) / 2);
 
   --letter-spacing: 0.5rem;
@@ -45,6 +39,12 @@ body {
   --keyboard-key-height: 3.625rem;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -54,4 +54,8 @@ body {
   margin: 0;
 
   font-family: var(--body-font-family);
+}
+
+* {
+  box-sizing: border-box;
 }
